# advent-of-code-rs

./: Cargo.toml  README.md
2025/01/: README.md  main.rs
2025/02/: README.md  main.rs
2025/03/: README.md  main.rs
2025/04/: README.md  main.rs
2025/05/: README.md  main.rs
2025/06/: main.rs
2025/07/: main.rs
